--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dialogflow-yhattm",
+  "name": "dialogflow",
   "version": "1.0.0",
   "engines": {
     "node": "10.x"
@@ -16,6 +16,9 @@
     "dialogflow-fulfillment": "^0.5.0",
     "express": "^4.16.3",
     "node-fetch": "^2.2.0",
-    "speakeasy": "^2.0.0"
-  }
+    "speakeasy": "^2.0.0",
+    "tslib": "https://github.com/yhattm/tslib.git"
+  },
+  "keywords": [],
+  "description": ""
 }
