--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "actions-on-google": "^2.2.0",
     "dialogflow-fulfillment": "^0.5.0",
     "express": "^4.16.3",
-    "tslib": "https://github.com/yhattm/tslib.git"
+    "yhattmtslib": "https://github.com/yhattm/yhattmtslib.git"
   },
   "keywords": [],
   "description": ""
