--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "actions-on-google": "^2.2.0",
     "dialogflow-fulfillment": "^0.5.0",
-    "express": "^4.16.3",
-    "yhattmtslib": "https://github.com/yhattm/yhattmtslib.git"
+    "express": "^4.16.3"
   },
   "keywords": [],
   "description": ""
