--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "actions-on-google": "^2.2.0",
     "dialogflow-fulfillment": "^0.5.0",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "yhattmtslib": "https://github.com/yhattm/yhattmtslib.git"
   },
   "keywords": [],
   "description": ""
